@@ -1,6 +1,6 @@
 Package: lme4
-Version: 0.9975-6
-Date: 2006-10-16
+Version: 0.9975-7
+Date: 2006-10-18
 Title: Linear mixed-effects models using S4 classes
 Author: Douglas Bates <bates@stat.wisc.edu> and
 	Deepayan Sarkar <deepayan@stat.wisc.edu>
