@@ -148,7 +148,7 @@ mkFltype <- function(family)
     if (family$family == "gaussian" && family$link == "identity") fltype <- -1
     if (family$family == "binomial" && family$link == "logit") fltype <- 1
     if (family$family == "binomial" && family$link == "probit") fltype <- 2
-    if (family$family == "poisson" && family$link == "link") fltype <- 3
+    if (family$family == "poisson" && family$link == "log") fltype <- 3
     as.integer(fltype)
 }
 
@@ -403,7 +403,6 @@ lmer <- function(formula, data, family = gaussian,
     ## weights could have changed
     weights <- glmFit$prior.weights
     eta <- glmFit$linear.predictors
-    wtssqr <- weights * weights
     linkinv <- quote(family$linkinv(eta))
     mu.eta <- quote(family$mu.eta(eta))
     mu <- family$linkinv(eta)
@@ -412,7 +411,7 @@ lmer <- function(formula, data, family = gaussian,
     LMEopt <- get("LMEoptimize<-")
     doLMEopt <- quote(LMEopt(x = mer, value = cv))
     if (family$family %in% c("binomial", "poisson")) # set the constant scale
-        mer@devComp[8] <- -mean(weights)
+        mer@devComp[8] <- -1
     mer@status["glmm"] <- as.integer(switch(method, PQL = 1, Laplace = 2, AGQ = 3))
     GSpt <- .Call(glmer_init, environment(), fltype)
     if (cv$usePQL) {
@@ -649,12 +648,11 @@ setMethod("mcmcsamp", signature(object = "glmer"),
           eta <- .Call(mer_fitted, mer)
           offset <- numeric(length(eta)) ## change this, save the offset in mer
           Y <- object@y
-          wtssqr <- weights * weights
           linkinv <- quote(family$linkinv(eta))
           mu.eta <- quote(family$mu.eta(eta))
           mu <- family$linkinv(eta)
           variance <- quote(family$variance(mu))
-          dev.resids <- quote(family$dev.resids(Y, mu, wtssqr))
+          dev.resids <- quote(family$dev.resids(Y, mu, weights))
           LMEopt <- get("LMEoptimize<-")
           doLMEopt <- quote(LMEopt(x = mer, value = cv))
           fltype <- mkFltype(family)
@@ -1247,7 +1245,7 @@ carryOver <- function(formula, data, carry, REML = TRUE, control = list(),
 mlirt <-
     function(formula, data, family = binomial("probit"),
              control = list(), start = NULL,
-             subset, weights, na.action = na.ignore, offset,
+             subset, weights, na.action = na.pass, offset,
              contrasts = NULL, model = FALSE, ...)
 {
     formula <- as.formula(formula)
@@ -1315,12 +1313,11 @@ mlirt <-
     ## weights could have changed
     weights <- glmFit$prior.weights
     eta <- glmFit$linear.predictors
-    wtssqr <- weights * weights
     linkinv <- quote(family$linkinv(eta))
     mu.eta <- quote(family$mu.eta(eta))
     mu <- family$linkinv(eta)
     variance <- quote(family$variance(mu))
-    dev.resids <- quote(family$dev.resids(Y, mu, wtssqr))
+    dev.resids <- quote(family$dev.resids(Y, mu, weights))
     doLMEopt <- quote(LMEopt(x = mer, value = cv))
     mer@devComp[8] <- -mean(weights)
     mer@status["glmm"] <- as.integer(2) # always use Laplace
